
v1.1
----
- changed license to MIT