@@ -1,4 +1,3 @@
 
 TODO:
-- allow timestamp format to be fully customized
 - split chat log files by date
