@@ -2,3 +2,4 @@
 v1.1
 ----
 - changed license to MIT
+- timestamp format can be customized
